[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "imbalanced-learn>=0.14.0",
    "joblib>=1.5.2",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "streamlit>=1.50.0",
]
